@@ -15,6 +15,8 @@
     function.  Removed some unused global variables.
   o Added command line switch `-x' (hexdump). Switch `-o' implies `-x'.
   o Added command line switch `-V' (version).
+  o Added function netcat_getport() which substitutes the old getportpoop().
+    Updated references to the function and related struct.
 
 
 [*] Sun Apr 28 2002 - netcat v0.1.0
